@@ -130,23 +130,25 @@ class GridContainerGetListProcessor extends modResourceGetListProcessor {
             // backward compatibility
             $fixParentProperties = false;
             $this->selectedElementFields = array_diff($this->selectedFields, $this->selectedMainFields);
-            foreach ($this->parentProperties['fields'] as $k => $field) {
-                if (in_array($field['name'], $this->selectedElementFields)) {
-                    if ($field['type'] === 'snippet') {
-                        $this->selectedSnippetFields = array_merge($this->selectedSnippetFields, (array) $field['name']);
-                    } else {
-                        $this->selectedTVFields = array_merge($this->selectedTVFields, (array) $field['name']);
+            if (!empty($this->parentProperties['fields']) && is_array($this->parentProperties['fields'])) {
+                foreach ($this->parentProperties['fields'] as $k => $field) {
+                    if (in_array($field['name'], $this->selectedElementFields)) {
+                        if ($field['type'] === 'snippet') {
+                            $this->selectedSnippetFields = array_merge($this->selectedSnippetFields, (array) $field['name']);
+                        } else {
+                            $this->selectedTVFields = array_merge($this->selectedTVFields, (array) $field['name']);
+                            // backward compatibility : adding 'type'
+                            if (!isset($this->parentProperties['fields'][$k]['type']) || empty($this->parentProperties['fields'][$k]['type'])) {
+                                $this->parentProperties['fields'][$k]['type'] = 'tv';
+                                $fixParentProperties = true;
+                            }
+                        }
+                    } elseif (in_array($field['name'], $this->selectedMainFields)) {
                         // backward compatibility : adding 'type'
                         if (!isset($this->parentProperties['fields'][$k]['type']) || empty($this->parentProperties['fields'][$k]['type'])) {
-                            $this->parentProperties['fields'][$k]['type'] = 'tv';
+                            $this->parentProperties['fields'][$k]['type'] = 'main';
                             $fixParentProperties = true;
                         }
-                    }
-                } elseif (in_array($field['name'], $this->selectedMainFields)) {
-                    // backward compatibility : adding 'type'
-                    if (!isset($this->parentProperties['fields'][$k]['type']) || empty($this->parentProperties['fields'][$k]['type'])) {
-                        $this->parentProperties['fields'][$k]['type'] = 'main';
-                        $fixParentProperties = true;
                     }
                 }
             }
