@@ -1,3 +1,7 @@
+GridClassKey
+=================================================
+- bugfix array loop at the first load
+
 GridClassKey 1.0.1-pl (January 28, 2016)
 =================================================
 - fill proper default settings for new container
